Swithed Database, Added a Vehicle DTO, Created User and Vehicle realtionship