@@ -1,8 +1,6 @@
 package com.example.project.Dealership.ServiceLayer;
 
-import com.example.project.Dealership.Entity.Make;
-import com.example.project.Dealership.Entity.Models;
-import com.example.project.Dealership.Entity.Vehicle;
+import com.example.project.Dealership.Entity.*;
 import com.example.project.Dealership.Repository.MakeRepo;
 import com.example.project.Dealership.Repository.ModelRepo;
 import com.example.project.Dealership.Repository.VehicleRepo;
@@ -16,6 +14,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -37,11 +36,10 @@ public class InventorySL {
     }*/
 
 
-    public Page<Vehicle> getSearchedVehicles(int pageNum, int size, String order, String sortBy, String isNew, String searchQuery) {
+    public Page<VehicleDTO> getSearchedVehicles(int pageNum, int size, String order, String sortBy, String isNew, String searchQuery) {
         Pageable paging = getSortOrder(pageNum, size, order, sortBy);
 
         Specification<Vehicle> spec = (root, query, cb) -> {
-
             List<Predicate> predicates = new ArrayList<>();
 
             if (isNew != null && !isNew.isEmpty()) {
@@ -59,18 +57,22 @@ public class InventorySL {
             return cb.and(predicates.toArray(new Predicate[0]));
         };
 
-        return vehicleRepo.findAll(spec, paging);
+        Page<Vehicle> vehiclesPage = vehicleRepo.findAll(spec, paging);
+
+        // Convert each vehicle in the Page to a VehicleDTO
+        Page<VehicleDTO> vehicleDTOPage = vehiclesPage.map(vehicle -> convertToDTO(vehicle));
+
+        return vehicleDTOPage;
     }
 
 
 
 
-    public List<Vehicle>GetSearchedVehicles(String isNew){
-
-
-        return vehicleRepo.findAll().stream().filter(p ->
-                p.isNew()==Boolean.parseBoolean(isNew)).toList();
-
+    public List<VehicleDTO> GetSearchedVehicles(String isNew) {
+        return vehicleRepo.findAll().stream()
+                .filter(p -> p.isNew() == Boolean.parseBoolean(isNew))
+                .map(vehicle -> convertToDTO(vehicle)) // Convert Vehicle to VehicleDTO
+                .collect(Collectors.toList());
     }
 
     private Pageable getSortOrder(int pageNum,int size,String order,String sortBy){
@@ -86,50 +88,51 @@ public class InventorySL {
         return paging;
     }
 
-    public Vehicle getVehicle(String id) throws NotFoundException {
 
 
-        return vehicleRepo.getVehicleByVin(id);
+    public Optional<VehicleDTO> getVehicle(String vin) {
+        Optional<Vehicle> vehicleOptional = vehicleRepo.getVehicleByVin(vin);
+
+        // Use the convertToDTO method to map the Vehicle to VehicleDTO
+        return vehicleOptional.map(vehicle -> convertToDTO(vehicle));
+    }
+    public Optional<Vehicle> addVehicleToDB(Vehicle vehicle, UserEntity currentUser) {
+        vehicle.setUserEntity(currentUser);
+        vehicleRepo.save(vehicle);
+        return Optional.of(vehicle);
     }
 
-public Vehicle addVehicleToDB(Vehicle vehicle){
+    public void removeVehicle(String vin) {
+        Optional<Vehicle> vehicle = vehicleRepo.getVehicleByVin(vin);
+        vehicle.ifPresent(vehicleRepo::delete);
+    }
 
-        vehicleRepo.save(vehicle);
+    public Optional<Vehicle> updateVehicleInformation(String vin, Vehicle vehicle) {
+        Optional<Vehicle> existingVehicleOpt = vehicleRepo.getVehicleByVin(vin);
+        if (existingVehicleOpt.isPresent()) {
+            Vehicle existingVehicle = existingVehicleOpt.get();
+            existingVehicle.setVin(vehicle.getVin());
+            existingVehicle.setModel(vehicle.getModel());
+            existingVehicle.setColor(vehicle.getColor());
+            existingVehicle.setNew(vehicle.isNew());
+            existingVehicle.setBodystyle(vehicle.getBodystyle());
+            existingVehicle.setTransmission(vehicle.getTransmission());
+            existingVehicle.setInterior(vehicle.getInterior());
+            existingVehicle.setYear(vehicle.getYear());
+            existingVehicle.setMsrp(vehicle.getMsrp());
+            existingVehicle.setSaleprice(vehicle.getSaleprice());
+            existingVehicle.setMileage(vehicle.getMileage());
+            existingVehicle.setDescription(vehicle.getDescription());
+            existingVehicle.setFeatured(vehicle.isFeatured());
+            existingVehicle.setPhoto(vehicle.getPhoto());
+            existingVehicle.setIssold(vehicle.isIssold());
 
-        return vehicleRepo.getVehicleByVin(vehicle.getVin());
-}
-
-public void removeVehicle(String vin){
-
-    Vehicle vehicle= vehicleRepo.getVehicleByVin(vin);
-    vehicleRepo.delete(vehicle);
-}
-
-public Vehicle updateVehicleInformation(String vin, Vehicle vehicle){
-        ///vin, modelid, color, type, bodystyle, transmission, interior, year, msrp, saleprice, mileage, description, photo, featured, issold
-    Vehicle beforeUpdate= vehicleRepo.getVehicleByVin(vin);
-
-    beforeUpdate.setVin(vehicle.getVin());
-    beforeUpdate.setModel(vehicle.getModel());
-    beforeUpdate.setColor(vehicle.getColor());
-    beforeUpdate.setNew(vehicle.isNew());
-    beforeUpdate.setBodystyle(vehicle.getBodystyle());
-    beforeUpdate.setTransmission(vehicle.getTransmission());
-    beforeUpdate.setInterior(vehicle.getInterior());
-    beforeUpdate.setYear(vehicle.getYear());
-    beforeUpdate.setMsrp(vehicle.getMsrp());
-    beforeUpdate.setSaleprice(vehicle.getSaleprice());
-    beforeUpdate.setMileage(vehicle.getMileage());
-    beforeUpdate.setDescription(vehicle.getDescription());
-    beforeUpdate.setFeatured(vehicle.isFeatured());
-    beforeUpdate.setPhoto(vehicle.getPhoto());
-    beforeUpdate.setFeatured(vehicle.isFeatured());
-    beforeUpdate.setIssold(vehicle.isIssold());
-
-    vehicleRepo.save(beforeUpdate);
-    return beforeUpdate;
-}
-
+            vehicleRepo.save(existingVehicle);
+            return Optional.of(existingVehicle);
+        } else {
+            return Optional.empty();
+        }
+    }
 
 public List<Make> getMakes(){
         return makeRepo.findAll();
@@ -148,6 +151,50 @@ public List<Vehicle>getFeatured(){
 
 
 }
+
+    public VehicleDTO convertToDTO(Vehicle vehicle) {
+        return new VehicleDTO(
+                vehicle.getVehicleid(),
+                vehicle.getVin(),
+                vehicle.getModel(),
+                vehicle.getColor(),
+                vehicle.getBodystyle(),
+                vehicle.getTransmission(),
+                vehicle.getInterior(),
+                vehicle.getYear(),
+                vehicle.getMsrp(),
+                vehicle.getMileage(),
+                vehicle.getDescription(),
+                vehicle.getPhoto(),
+                vehicle.isFeatured(),
+                vehicle.isIssold(),
+                vehicle.getSaleprice(),
+                vehicle.isNew(),
+                vehicle.getUserEntity().getFirstname() +" "+ vehicle.getUserEntity().getLastname()
+        );
+    }
+
+    public Vehicle convertToEntity(VehicleDTO vehicleDTO) {
+        Vehicle vehicle = new Vehicle();
+        vehicle.setVehicleid(vehicleDTO.getVehicleid());
+        vehicle.setVin(vehicleDTO.getVin());
+        vehicle.setModel(vehicleDTO.getModel());
+        vehicle.setColor(vehicleDTO.getColor());
+        vehicle.setBodystyle(vehicleDTO.getBodystyle());
+        vehicle.setTransmission(vehicleDTO.getTransmission());
+        vehicle.setInterior(vehicleDTO.getInterior());
+        vehicle.setYear(vehicleDTO.getYear());
+        vehicle.setMsrp(vehicleDTO.getMsrp());
+        vehicle.setMileage(vehicleDTO.getMileage());
+        vehicle.setDescription(vehicleDTO.getDescription());
+        vehicle.setPhoto(vehicleDTO.getPhoto());
+        vehicle.setFeatured(vehicleDTO.isFeatured());
+        vehicle.setIssold(vehicleDTO.isIssold());
+        vehicle.setSaleprice(vehicleDTO.getSaleprice());
+        vehicle.setNew(vehicleDTO.isNew());
+        vehicle.setUserEntity(new UserEntity()); // You can set userEntity if needed.
+        return vehicle;
+    }
 
 
 
